--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FrontParcial2</title>
+  <title>My Anime List</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="myanimelist.svg">
 </head>
 <body>
-  <app-root></app-root>
+  <nav class="navbar navbar-expand-lg" style="background-color: #1baac6;">
+    <div class="container-fluid">
+        <a class="navbar-brand d-flex align-items-center" href="#">
+            <img src="myanimelist.svg" alt="Logo" width="50" height="50" class="rounded-pill">
+            <h4 class="d-inline-block mb-0 ms-2 text-white p-2">My Anime List</h4>
+        </a>
+    </div>
+  </nav>
+  <app-root class="m-1"></app-root>
 </body>
 </html>
